qt/multimedia/gen_qmediastreamscontrol.h

class QMediaStreamsControl;
class QMetaObject;
class QVariant;
typedef struct QMediaStreamsControl QMediaStreamsControl;
typedef struct QMetaObject QMetaObject;
typedef struct QVariant QVariant;
QMetaObject* QMediaStreamsControl_metaObject(const QMediaStreamsControl* self);
void* QMediaStreamsControl_metacast(QMediaStreamsControl* self, const char* param1);
int QMediaStreamsControl_metacall(QMediaStreamsControl* self, int param1, int param2, void** param3);
struct miqt_string QMediaStreamsControl_tr(const char* s);
struct miqt_string QMediaStreamsControl_trUtf8(const char* s);
int QMediaStreamsControl_streamCount(QMediaStreamsControl* self);
int QMediaStreamsControl_streamType(QMediaStreamsControl* self, int streamNumber);
QVariant* QMediaStreamsControl_metaData(QMediaStreamsControl* self, int streamNumber, struct miqt_string key);
bool QMediaStreamsControl_isActive(QMediaStreamsControl* self, int streamNumber);
void QMediaStreamsControl_setActive(QMediaStreamsControl* self, int streamNumber, bool state);
void QMediaStreamsControl_streamsChanged(QMediaStreamsControl* self);
void QMediaStreamsControl_connect_streamsChanged(QMediaStreamsControl* self, intptr_t slot);
void QMediaStreamsControl_activeStreamsChanged(QMediaStreamsControl* self);
void QMediaStreamsControl_connect_activeStreamsChanged(QMediaStreamsControl* self, intptr_t slot);
struct miqt_string QMediaStreamsControl_tr2(const char* s, const char* c);
struct miqt_string QMediaStreamsControl_tr3(const char* s, const char* c, int n);
struct miqt_string QMediaStreamsControl_trUtf82(const char* s, const char* c);
struct miqt_string QMediaStreamsControl_trUtf83(const char* s, const char* c, int n);
void QMediaStreamsControl_delete(QMediaStreamsControl* self);